# notes-archive

./: .env  Cargo.toml  test.txt
src/: main.rs
src/views/: edit.html
