[package]
name = "maria-static"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
maria = "0.8.1"
markdown = "0.3.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.106"
tokio = "1.32.0"
